syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse){}
}

service RemoveChavePixService{
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}


//Registra Chave Pix
message RegistraChavePixRequest{
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse{
  string pixId = 1;
}

enum TipoChave{
  UNKNOWN_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  UNKNOWN_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

//remove chave pix
message RemoveChavePixRequest{
  string pixId = 1;
  string clienteId = 2;
}

message RemoveChavePixResponse{
  string mensagem = 1;
}

